IAM-1778 - Replace node-sass with dart-sass

--- a/packages/platform-enduser/src/scss/theme-components.scss
+++ b/packages/platform-enduser/src/scss/theme-components.scss
@@ -24,7 +24,7 @@
       font-weight: 500;
 
       & + p {
-        margin-top: ($spacer/4);
+        margin-top: calc($spacer / 4);
       }
     }
 
