--- a/packages/platform-enduser/src/scss/custom-form.scss
+++ b/packages/platform-enduser/src/scss/custom-form.scss
@@ -9,6 +9,7 @@
  * Custom control indicators
  * Build the custom controls out of psuedo-elements.
  */
+@use 'sass:math';
 
 .form-control {
   height: 50px;
@@ -20,7 +21,7 @@
   /* Background-color and (when enabled) gradient */
   &::before {
     position: absolute;
-    top: (($line-height-base - $custom-control-indicator-size) / 2);
+    top: math.div(($line-height-base - $custom-control-indicator-size), 2);
     left: 0;
     display: block;
     width: $custom-control-indicator-size;
@@ -36,7 +37,7 @@
   /* Foreground (icon) */
   &::after {
     position: absolute;
-    top: (($line-height-base - $custom-control-indicator-size) / 2);
+    top: math.div(($line-height-base - $custom-control-indicator-size), 2);
     left: 0;
     display: block;
     width: $custom-control-indicator-size;
